[project]
name = "ol-concourse-lib"
version = "0.1.0"
description = "Python DSL for programmatically building Concourse CI/CD pipelines"
authors = [{ name = "MIT Open Learning", email = "odl-devops@mit.edu" }]
requires-python = ">=3.13"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = ["pydantic>=2,<3"]

[project.optional-dependencies]
# Required by jobs/infrastructure.py Pulumi job builders
pulumi = ["pulumi>=3.22.1,<4"]

[project.urls]
Homepage = "https://github.com/mitodl/ol-concourse"
Repository = "https://github.com/mitodl/ol-concourse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ol_concourse"]
