[project]
name = "ol-concourse"
version = "0.7.1"
description = "Python DSL for programmatically building Concourse CI/CD pipelines"
authors = [{ name = "MIT Open Learning", email = "odl-devops@mit.edu" }]
requires-python = ">=3.13"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = ["pydantic>=2,<3"]

[project.urls]
Homepage = "https://github.com/mitodl/ol-concourse"
Repository = "https://github.com/mitodl/ol-concourse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ol_concourse"]
