[project]
name = "ol-concourse-packer"
version = "0.2.0"
description = "Concourse resource type for running Packer builds"
authors = [{ name = "MIT Open Learning", email = "odl-devops@mit.edu" }]
requires-python = ">=3.13"
readme = "README.md"
license = "BSD-3-Clause"
# No external Python runtime deps — stdlib + concoursetools only
dependencies = ["concoursetools>=0.8.0,<0.9"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["concourse.py", "packer.py", "io_utils.py"]
