[project]
name = "ol-concourse-pulumi"
version = "0.2.0"
description = "Concourse resource type for running Pulumi stack deployments"
authors = [{ name = "MIT Open Learning", email = "odl-devops@mit.edu" }]
requires-python = ">=3.13"
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "concoursetools>=0.8.0,<0.9",
    "pulumi>=3.22.1,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["concourse.py", "pulumi_utils.py", "io_utils.py"]
