[project]
name = "ol-concourse-pulumi"
version = "0.2.0"
description = "Concourse resource type for running Pulumi stack deployments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "concoursetools>=0.8.0,<0.9",
    "pulumi>=3.227.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
