[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-concourse-pulumi"
version = "0.2.0"
description = "Concourse resource type for running Pulumi stack deployments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "concoursetools>=0.8.0,<0.9",
    "pulumi>=3.227.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["concourse.py", "io_utils.py", "main.py", "pulumi_utils.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
