[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ol-concourse-release"
version = "0.1.0"
description = "Concourse resource type for git release orchestration"
readme = "README.md"
requires-python = ">=3.13"
license = "BSD-3-Clause"
authors = [{ name = "MIT Open Learning", email = "odl-devops@mit.edu" }]
dependencies = [
    "concoursetools>=0.8.0,<0.9",
    "PyGithub>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-mock>=3.14.0,<4",
]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["concourse.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
